// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Bracket Bracket 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bracket Bracket 2`] = `
Array [
  0.7,
  0,
  0.028,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bracket Bracket 3`] = `
Array [
  0.7,
  0,
  0.0574,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;
